--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^4.0.0",
     "@nebular/auth": "^2.0.0-rc.3",
     "@nebular/theme": "^2.0.0-rc.3",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "jquery": "^1.9.1",
     "popper.js": "^1.12.9",
@@ -49,6 +49,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.3.4"
   }
 }
