--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "jquery": "^1.9.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "ionicons": "2.0.1",
+    "socicon": "3.0.5",
+    "nebular-icons": "1.0.6",
+    "roboto-fontface": "0.8.0",
+    "font-awesome": "4.7.0"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
