--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@nebular/auth": "^2.0.0-rc.3",
-    "@nebular/theme": "^2.0.0-rc.3",
+    "@nebular/auth": "2.0.0-rc.3",
+    "@nebular/theme": "2.0.0-rc.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
