--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
-    "jquery": "^1.9.1",
-    "popper.js": "^1.12.9",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
+    "font-awesome": "4.7.0",
+    "fullcalendar": "3.6.1",
     "ionicons": "2.0.1",
-    "socicon": "3.0.5",
+    "jquery": "^3.2.1",
+    "moment": "^2.20.1",
     "nebular-icons": "1.0.6",
+    "ng-fullcalendar": "^1.3.0",
+    "popper.js": "^1.12.9",
     "roboto-fontface": "0.8.0",
-    "font-awesome": "4.7.0"
+    "rxjs": "^5.5.2",
+    "socicon": "3.0.5",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
