--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 3003",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,6 +32,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "nebular-icons": "1.0.6",
+    "ng2-tree": "^2.0.0-rc.4",
     "popper.js": "^1.12.9",
     "roboto-fontface": "0.8.0",
     "rxjs": "^5.5.2",
