--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "fullcalendar": "3.6.1",
     "ionicons": "2.0.1",
     "jquery": "^3.2.1",
-    "jquery-ui": "^1.12.1",
+    "ckeditor": "4.6.2",
+    "ng2-ckeditor": "1.1.9",
     "jquery-ui-dist": "^1.12.1",
     "moment": "^2.20.1",
     "nebular-icons": "1.0.6",
-    "ng-drag-drop": "^4.0.0",
     "ng2-tree": "^2.0.0-rc.4",
     "popper.js": "^1.12.9",
     "roboto-fontface": "0.8.0",
